--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body style="background: gray;">
 
-	<h1 style="color: blue; text-align: center; padding: 10% 0;">Formation DWWM</h1>
+	<h1 style="color: blue; text-align: center; padding: 10% 0; color: black;">Formation DWWM</h1>
 </body>
 
 
