modif de la couleur du fond

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body style="background: gray;">
+<body style="background: #ec92f0;">
 
 	<h1 style="color: blue; text-align: center; padding: 10% 0; color: black;">Formation DWWM</h1>
 </body>
